# Pierogi_GameEngine

./: .gitignore  CMakeLists.txt  Game_FT.sln  unique.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Game_FT/: BattleBoard.cpp  BattleBoard.h  CMakeLists.txt  Game_FT.vcxproj  Game_FT.vcxproj.filters  Tile.cpp  Tile.h  main.cpp
Pierogi/: CMakeLists.txt  Events.cpp  Events.h  PRWindow.cpp  PRWindow.h  Picture.cpp  Picture.h  PictureImplementation.h  Pierogi.vcxproj  Pierogi.vcxproj.filters  PierogiApp.cpp  PierogiApp.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  keys.h  pch.h  placeholder.cpp
Pierogi/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Pierogi/include/: Pierogi.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
